--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   </style>
 </head>
 <body>
+<main>
 
+  <!--Hero section start-->
   Try It Free
 
   Build The Community Your Fans Will Love
@@ -24,7 +26,9 @@
   Create connections with your users as you engage in genuine discussion. 
 
   Get Started For Free
+  <!--Hero section end-->
 
+  <!--Card section start-->
   Grow Together
 
   Generate meaningful discussions with your audience and build a strong, loyal community. 
@@ -39,11 +43,16 @@
 
   It takes no time at all to integrate Huddle with your app's authentication solution. 
   This means, once signed in to your app, your users can start chatting immediately.
+  <!--Card section end-->
 
+  <!--Call-to-action-->
   Ready To Build Your Community?
 
   Get Started For Free
+</main>
 
+
+  <footer>
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
   incididunt ut labore et dolore magna aliqua
 
@@ -60,7 +69,6 @@
 
   &copy; Copyright 2018 Huddle. All rights reserved.
 
-  <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
